--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta name="google-site-verification" content="gwzDwsZ3IRa_qZpk0IKqfARfFAxrY-eMW-5FNmZv8zU" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Read a critical review exposing the scam broker cmccapitals.com. Learn why cmccapitals.com is not legit and how to avoid being scammed.">
