--- a/index.html
+++ b/index.html
@@ -50,4 +50,41 @@
   <h1>Cmccapitals.com Review – WARNING: A Confirmed Scam!</h1>
 
   <div class="warning">
-    ⚠️ <strong>Alert:</strong> Cmccapitals.com is an <strong>unlicensed and fraudulent broker</strong> that is actively scamming traders. Numerous complaints have surfaced from victims who were defra
+    ⚠️ <strong>Alert:</strong> Cmccapitals.com is an <strong>unlicensed and fraudulent broker</strong> that is actively scamming traders. Numerous complaints have surfaced from victims who were defrauded.
+  </div>
+
+  <h2>Is Cmccapitals.com Legit or a Scam?</h2>
+  <p>No, <strong>cmccapitals.com is not a legitimate broker</strong>. It operates without any recognized financial license or regulatory oversight. The platform preys on <strong>inexperienced and novice traders</strong>, luring them with false promises and fake success stories.</p>
+
+  <h2>Client Complaints and Red Flags</h2>
+  <ul>
+    <li>Fake trading platforms designed to manipulate outcomes</li>
+    <li>Refusal to process withdrawal requests</li>
+    <li>Aggressive tactics to pressure more deposits</li>
+    <li>Unresponsive or disappearing customer support</li>
+    <li>No legal accountability or regulatory registration</li>
+  </ul>
+
+  <p>Many traders have reported losing their <strong>entire deposits</strong> shortly after engaging with cmccapitals.com.</p>
+
+  <h2>Do Not Trust Cmccapitals.com</h2>
+  <p>The website uses professional designs and fake reviews to appear legitimate. <strong>Don’t be fooled.</strong> Their sole intention is to scam unsuspecting users out of their money.</p>
+
+  <h2>Our Final Verdict on Cmccapitals.com</h2>
+  <p>
+    <strong>Cmccapitals.com is a confirmed scam operation.</strong> Do not deposit funds with them under any circumstances. If you've already fallen victim, contact us for guidance on next steps.
+  </p>
+
+  <h2>Star Rating: Cmccapitals.com</h2>
+  <p class="stars">★☆☆☆☆ (1/5)</p>
+  <p><strong>Cmccapitals.com reviews:</strong> Extremely negative across online forums and fraud reporting platforms.</p>
+
+  <h2>Search Terms to Be Aware Of:</h2>
+  <p><em>
+    cmccapitals.com scam, cmccapitals.com legit, cmccapitals.com reviews, cmccapitals.com review, is cmccapitals.com scam or legit
+  </em></p>
+
+  <a href="https://t.me/jfroex" class="telegram-float" target="_blank">💬 Contact @jfroex on Telegram</a>
+
+</body>
+</html>
